kubectl-singleloadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: globallocation-globalloadbalancer-svc
  labels:
    app: globallocation-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: globallocation-app
